# graphischeDatenverarbeitungHost

./: CMakeLists.txt  README.md
uebung01/: 01.c  02.c  03.c  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
uebung01/uebung04/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
uebung02/src/: CMakeCache.txt  CMakeLists.txt  Makefile  backface.cpp  backface.h  cmake_install.cmake  compile_commands.json  flatshading.cpp  flatshading.h  gouraudshading.cpp  gouraudshading.h  lines.cpp  lines.h  math3d.cpp  math3d.h  projection.cpp  projection.h  teapot.cpp  teapot.h  teapotdata.cpp  teapotdata.h  trifill.cpp  trifill.h  uebung2.sln  uebung2.vcxproj  wireframe.cpp  wireframe.h
